welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:1: error: not found: type Boulean
var fini:Boulean = false
         ^BDRBuggle:7: error: not found: value R
      if (litMessage==R){
                      ^BDRBuggle:11: error: not found: value L
      if (litMessage==L){
                      ^BDRBuggle:15: error: not found: value I
      if (litMessage==I){
                      ^BDRBuggle:19: error: not found: value A
      if (litMessage==A){
                      ^BDRBuggle:22: error: not found: value B
      if (litMessage==B){
                      ^BDRBuggle:26: error: not found: value C
      if (litMessage==C){
                      ^BDRBuggle:31: error: not found: value Z
      if (litMessage==Z){
                      ^BDRBuggle:34: error: not found: value Y
      if (litMessage==Y){
                      ^BDRBuggle:38: error: not found: value X
      if (litMessage==X){
                      ^